[tool.poetry]
name = "pyhouse"
version = "0.1.0"
description = ""
authors = ["Juliano Gouveia <julianoamg.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-connect = "^0.8.5"
sqlglot = "^25.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
