[tool.poetry]
name = "pyhouse"
version = "0.1.0"
description = ""
authors = ["Juliano Gouveia <julianoamg.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = "^25.28.0"
clickhouse-driver = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
